--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section id="hero" class="hero">
             <nav class="nav">
                 <div class="nav-brand">
-                    <img src="Картинки для лендинга/Лого_черный.svg" alt="Логотип ТЭК ЛОГИСТИКА" class="logo" />
+                    <img src="image/logo_black.svg" alt="Логотип ТЭК ЛОГИСТИКА" class="logo" />
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#hero">о решении</a></li>
@@ -56,13 +56,13 @@
                     <div class="table-row">
                         <div class="table-cell">
                             <div class="cell-content">
-                                <img src="Картинки для лендинга/для лэндинга логистика-02.png" alt="Иконка" class="cell-image">
+                                <img src="image/image-02.png" alt="Иконка" class="cell-image">
                                 <p>исключить ручное планирование</p>
                             </div>
                         </div>
                         <div class="table-cell">
                             <div class="cell-content">
-                                <img src="Картинки для лендинга/для лэндинга логистика-02.png" alt="Иконка" class="cell-image">
+                                <img src="image/image-02.png" alt="Иконка" class="cell-image">
                                 <p>избавить от неконтролируемых очередей на отгрузке</p>
                             </div>
                         </div>
@@ -70,13 +70,13 @@
                     <div class="table-row">
                         <div class="table-cell">
                             <div class="cell-content">
-                                <img src="Картинки для лендинга/для лэндинга логистика-02.png" alt="Иконка" class="cell-image">
+                                <img src="image/image-02.png" alt="Иконка" class="cell-image">
                                 <p>сократить простои транспорта</p>
                             </div>
                         </div>
                         <div class="table-cell">
                             <div class="cell-content">
-                                <img src="Картинки для лендинга/для лэндинга логистика-02.png" alt="Иконка" class="cell-image">
+                                <img src="image/image-02.png" alt="Иконка" class="cell-image">
                                 <p>оптимизировать загрузку инфраструктуры предприятия</p>
                             </div>
                         </div>
@@ -84,13 +84,13 @@
                     <div class="table-row">
                         <div class="table-cell">
                             <div class="cell-content">
-                                <img src="Картинки для лендинга/для лэндинга логистика-02.png" alt="Иконка" class="cell-image">
+                                <img src="image/image-02.png" alt="Иконка" class="cell-image">
                                 <p>формировать регулярную оперативную отчетность</p>
                             </div>
                         </div>
                         <div class="table-cell">
                             <div class="cell-content">
-                                <img src="Картинки для лендинга/для лэндинга логистика-02.png" alt="Иконка" class="cell-image">
+                                <img src="image/image-02.png" alt="Иконка" class="cell-image">
                                 <p>избежать затоваривания складов и резервуаров</p>
                             </div>
                         </div>
@@ -125,31 +125,31 @@
                     <div class="system-integrations-grid">
                         <div class="system-integration-row system-integration-row-top">
                             <div class="system-integration-item">
-                                <img src="Картинки для лендинга/для лэндинга логистика-05.png" alt="Иконка" class="cell-image-triangle">
+                                <img src="image/image-05.png" alt="Иконка" class="cell-image-triangle">
                                 <span>ЭТРАН (РЖД)</span>
                             </div>
                             <div class="system-integration-item">
-                                <img src="Картинки для лендинга/для лэндинга логистика-05.png" alt="Иконка" class="cell-image-triangle">
+                                <img src="image/image-05.png" alt="Иконка" class="cell-image-triangle">
                                 <span>ERP системы</span>
                             </div>
                             <div class="system-integration-item">
-                                <img src="Картинки для лендинга/для лэндинга логистика-05.png" alt="Иконка" class="cell-image-triangle">
+                                <img src="image/image-05.png" alt="Иконка" class="cell-image-triangle">
                                 <span>WMS, YMS</span>
                             </div>
                             <div class="system-integration-item">
-                                <img src="Картинки для лендинга/для лэндинга логистика-05.png" alt="Иконка" class="cell-image-triangle">
+                                <img src="image/image-05.png" alt="Иконка" class="cell-image-triangle">
                                 <span>НСИ</span>
                             </div>
                         </div>
                         <div class="system-integration-row system-integration-row-middle">
                             <div class="system-integration-item system-integration-item-wide">
-                                <img src="Картинки для лендинга/для лэндинга логистика-05.png" alt="Иконка" class="cell-image-triangle">
+                                <img src="image/image-05.png" alt="Иконка" class="cell-image-triangle">
                                 <span>личные кабинеты перевозчиков и поставщиков</span>
                             </div>
                         </div>
                         <div class="system-integration-row system-integration-row-bottom">
                             <div class="system-integration-item system-integration-item-wide">
-                                <img src="Картинки для лендинга/для лэндинга логистика-05.png" alt="Иконка" class="cell-image-triangle">
+                                <img src="image/image-05.png" alt="Иконка" class="cell-image-triangle">
                                 <span>системы поставщиков логистических услуг и экспедиторов</span>
                             </div>
                         </div>
@@ -162,11 +162,11 @@
             <h2 class="section-title">Компоненты решения</h2>
             <div class="solution-components-content">
                 <div class="solution-component-left">
-                    <img src="Картинки для лендинга/для лэндинга логистика-06.png" alt="Компонент решения" class="solution-component-image">
+                    <img src="image/image-06.png" alt="Компонент решения" class="solution-component-image">
                     <p class="solution-component-text">импортонезависимый стек</p>
                 </div>
                 <div class="solution-component-right">
-                    <img src="Картинки для лендинга/для лэндинга логистика-07.png" alt="Компонент решения" class="solution-component-image-2">
+                    <img src="image/image-07.png" alt="Компонент решения" class="solution-component-image-2">
                 </div>
             </div>
         </div>
@@ -355,7 +355,7 @@
                     
                 </div>
                     <div class="system-integration-item-right">
-                        <img src="Картинки для лендинга/для лэндинга логистика-05.png" alt="Иконка" class="cell-image-triangle">
+                        <img src="image/image-05.png" alt="Иконка" class="cell-image-triangle">
 
                         <span>узнайте больше о других продуктах ТЭК</span>
                     </div>
@@ -385,7 +385,7 @@
     <footer class="footer">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="Картинки для лендинга/для лэндинга логистика-16.png" alt="Иконка" class="cell-image">
+                    <img src="image/image-16.png" alt="Иконка" class="cell-image">
 
                 </div>
                 <div class="footer-info">
